Правки свагера для создания задачи
